--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prime-music",
+  "name": "mavuika",
   "version": "1.2",
   "description": "Music Bot",
   "main": "index.js",
@@ -16,7 +16,7 @@
   "scripts": {
     "start": "node index.js"
   },
-  "author": "SSRR",
+  "author": "Ali No Baka",
   "license": "XX",
   "engines": {
     "node": "20.x"
